--- a/index.ipynb
+++ b/index.ipynb
@@ -165,7 +165,7 @@
     }
    ],
    "source": [
-    "italy = countries3 # 'Italy'\n",
+    "italy = countries(3) # 'Italy'\n",
     "italy"
    ]
   },
