--- a/index.ipynb
+++ b/index.ipynb
@@ -165,7 +165,7 @@
     }
    ],
    "source": [
-    "italy = countries[3] # 'Italy'\n",
+    "italy = countries['ita'] # 'Italy'\n",
     "italy"
    ]
   },
