Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -165,7 +165,7 @@
     }
    ],
    "source": [
-    "italy = countries['ita'] # 'Italy'\n",
+    "italy = countries['italy'=] # 'Italy'\n",
     "italy"
    ]
   },
